Improve button debug #31 Add commented material colors Try to amend stroke-shadow Improve block model overflow Fix default color in card model Form-field model: Fix default color Fix radius Change aligning to start Delete icon selecting in Safari Fix icon and button size Improve - a bit smaller buttons and icons collapsing Clean hacks in list-switcher model Delete states from plain list-switcher Improve text-field debug Add tf_multiline to improve textarea box-model

--- a/core/_colors.scss
+++ b/core/_colors.scss
@@ -1,3 +1,19 @@
+/* Material Design Colors
+//===============================================
+$gamma: (
+    white:  (0: #FFFFFF),
+    slate:  (4: #CFD8DC, 3: #B0BEC5, 2: #90A4AE, 1: #78909C, 0: #607D8B, -1: #546E7A, -2: #455A64, -3: #37474F),
+    black:  (0: #000000),
+    red:    (4: #FFCDD2, 3: #EF9A9A, 2: #E57373, 1: #EF5350, 0: #F44336, -1: #E53935, -2: #D32F2F, -3: #C62828),
+    orange: (4: #FFE0B2, 3: #FFCC80, 2: #FFB74D, 1: #FFA726, 0: #FF9800, -1: #FB8C00, -2: #F57C00, -3: #EF6C00),
+    yellow: (4: #FFF9C4, 3: #FFF59D, 2: #FFF176, 1: #FFEE58, 0: #FFEB3B, -1: #FDD835, -2: #FBC02D, -3: #F9A825),
+    green:  (4: #C8E6C9, 3: #A5D6A7, 2: #81C784, 1: #66BB6A, 0: #4CAF50, -1: #43A047, -2: #388E3C, -3: #2E7D32),
+    blue:   (4: #BBDEFB, 3: #90CAF9, 2: #64B5F6, 1: #42A5F5, 0: #2196F3, -1: #1E88E5, -2: #1976D2, -3: #1565C0),
+    purple: (4: #E1BEE7, 3: #CE93D8, 2: #BA68C8, 1: #AB47BC, 0: #9C27B0, -1: #8E24AA, -2: #7B1FA2, -3: #6A1B9A),
+    pink:   (4: #F8BBD0, 3: #F48FB1, 2: #F06292, 1: #EC407A, 0: #E91E63, -1: #D81B60, -2: #C2185B, -3: #AD1457),
+);
+*/
+
 $gamma: (
   white:  (0: #ffffff),
   slate:  (4: #f2f9ff, 3: #d1e0f0, 2: #8fa6bf, 1: #7d96b3, 0: #556980, -1: #404f61, -2: #333f4d, -3: #2b3540),
