--- a/modules/b-block/_manifest.scss
+++ b/modules/b-block/_manifest.scss
@@ -8,11 +8,12 @@
   :which(Overflow) {
     height: size(7);
     max-height: size(80);
-    min-height: size(3);
+    min-height: size(3); //TODO https://code.google.com/p/chromium/issues/detail?id=94583
+    overflow: hidden;
     resize: vertical;
 
     &:hover:focus {
-      overflow-y: scroll;
+      overflow-y: auto;
     }
   }
 
