--- a/modules/c-card/_manifest.scss
+++ b/modules/c-card/_manifest.scss
@@ -1,4 +1,4 @@
-$card-background: color(white) !default;
+$card-background: $bg-default !default;
 $card-border-color: $border-default !default;
 $card-border-muted-color: $border-muted !default;
 $card-border-active-color: $border-hovered !default;
